# Games101

./: README.md  index.md
Accelerate Ray Tracing/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Triangle.hpp  main.cpp
Basic Recursive Ray Tracing/: README.md  Renderer.cpp  Triangle.hpp
Basic Recursive Ray Tracing/image/: .binary.ppm.icloud  binary.ppm
Bezier Curve/: README.md  main.cpp
Cloth Simulation/: README.md
Cloth Simulation/images/cloth_parameters/damping/: damping.txt
Cloth Simulation/shaders/: Diffuse.frag  Mirror.frag  Phong.frag
Cloth Simulation/src/: cloth 2.cpp  cloth.cpp  cloth.h  main.cpp
Cloth Simulation/src/collision/: plane 2.cpp  plane.cpp  sphere 2.cpp
Cloth Simulation/textures/: .texture_4.png.icloud
Code/: main.cpp  rasterizer.cpp
Draw A Triangle/: README.md  main.cpp  rasterizer.cpp
Path Tracing/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  README.md  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
Rope Simulation/: README.md
Rope Simulation/src/: application.cpp  rope.cpp
Shade the Cow/: README.md  Texture.hpp  main.cpp  rasterizer.cpp
